@@ -6,6 +6,7 @@ Unreleased
 - installProduct() now becomes a noop if ZopeTestCase did not apply its
   patches.
 - Made the functional doc tests set the cookie related headers.
+- Made sure logging is configured. Read $INSTANCE_HOME/log.ini if it exists.
 
 0.9.8 (Zope 2.8 edition)
 - Renamed 'doctest' package to 'zopedoctest' because of name-shadowing
